# blog_cereal_use

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
src/: cereal_sample.cc
